[MOISP-553] changing the ansible script formate

--- a/deployment/sandbox-v2/app/roles/nginx/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/nginx/defaults/main.yml
@@ -1,4 +1,4 @@
 ---
-# Domain name and mailid
+# Domain name and mailid for certbort ssl creation
 domain_name: nginx-r.technoforte.co.in
 admin_email: surendra.padala@technoforte.co.in
