--- a/deployment/sandbox-v2/app/roles/prerequisites/console/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/prerequisites/console/tasks/main.yml
@@ -13,6 +13,11 @@
 
 # TODO Install kubectl and transfer admin conf file
 #
+- name: Install python3
+  yum: 
+    name: python3
+  become: yes
+
 - name: Install openshift
   pip:
     name: openshift
