[MOSIP-257] Major restructuing and bug fixes.

--- a/deployment/sandbox-v2/app/hosts.ini
+++ b/deployment/sandbox-v2/app/hosts.ini
@@ -1,25 +1,16 @@
 [console]
-localhost ansible_host=10.6.1.180 ansible_user=puneet
+console ansible_user=mosipuser
+
+[kubemaster]
+kubemaster ansible_user=root
+
+[kubeworkers]
+kubeworker0 ansible_user=root 
+kubeworker1 ansible_user=root
 
 [kubecluster:children]
 kubemaster 
 kubeworkers 
-
-[kubeworkers:children]
-kubeworker1
-kubeworker2
-
-[kubemaster]
-kubean-m.technoforte.co.in ansible_host=10.6.1.130 ansible_user=root
-
-[kubeworker1]
-kubean-w1.technoforte.co.in ansible_host=10.6.1.131 ansible_user=root 
-
-[kubeworker2]
-kubean-w2.technoforte.co.in ansible_host=10.6.1.132 ansible_user=root 
-
-[persistent_data_node:children]
-kubeworker1
 
 
 
