--- a/deployment/sandbox-v2/app/kubenode.yml
+++ b/deployment/sandbox-v2/app/kubenode.yml
@@ -1,6 +1,6 @@
 # This play creates persistent directories on worker node for
 # postgres, config server, etc.
 - hosts: kubeworker1
-  gather_facts: false
+  gather_facts: true
   roles: 
-    - {role: prerequisites/kubenode, tags: [never, one-time, kubenode]}
+    - {role: persistence, tags: [persistence]}
