--- a/deployment/sandbox-v2/app/k8scluster.yml
+++ b/deployment/sandbox-v2/app/k8scluster.yml
@@ -1,17 +1,12 @@
 ---
 - hosts: kubecluster
-  gather_facts: yes
   become: yes
-  tasks:
-    - name: Install selinux
-      pip:
-        name: selinux
-      become: yes
-
-- hosts: kubecluster
   gather_facts: yes
-  become: yes
   roles:
+    - { role: packages/ansible, tags: [ansible]}
+    - { role: packages/pip, tags: [pip]}
+    - { role: packages/git, tags: [git]}
+    - { role: packages/selinux, tags: [selinux]}
     - { role: k8scluster/docker, tags: docker }
 
 - hosts: kubemaster
