--- a/deployment/sandbox-v2/app/roles/config-server/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/config-server/defaults/main.yml
@@ -8,7 +8,7 @@ config_repo_name: config_repo  # Git repo inside above node_path
 config_repo_node_path: '{{config_repo_node_dir}}/{{config_repo_name}}'
 config_repo_search_folder: ''  # If all properites at at the root repo level, then this will be empty
 config_repo_mount_path: /var/lib/  
-config_repo_local_storage_node: '{{(groups.persistent_data_node)[0]}}'
+config_repo_local_storage_hostname: '{{persistence_storage_hostname}}'
 config_repo_uri: '{{config_repo_mount_path}}{{config_repo_name}}'
 config_server_url: 'http://{{config_server_name}}/config'
 
