--- a/deployment/sandbox-v2/app/roles/postgres/postgres/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/postgres/postgres/tasks/main.yml
@@ -23,4 +23,4 @@
     state: present
     src: '{{tmp_dir}}/k8s_postgres.yml'
     wait: 'yes'
-    wait_timeout: 120
+    wait_timeout: '{{docker_wait_time}}' 
