--- a/deployment/sandbox-v2/app/ssh.yml
+++ b/deployment/sandbox-v2/app/ssh.yml
@@ -1,9 +1,7 @@
 # This play installs ssh and python3 on all machines - the very
 # basic tools needed to start any automation
-- hosts: all
+- hosts: kubecluster
   gather_facts: true
   roles:
-    - {role: ssh, tags: [ssh]}
-    - {role: packages/dnf, tags: [dnf]}
-    - {role: packages/python3, tags: [python3]}
+    - {role: ssh, tags: [ssh]} # --ask-pass is needed here
     
