[MOSIP-257] Ingress service changed to NodePort. Metallb not needed.

--- a/deployment/sandbox-v2/app/roles/postgres/postgres/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/postgres/postgres/defaults/main.yml
@@ -2,7 +2,7 @@ postgres_password: postgres
 postgres_name: postgres
 postgres_db: keycloak # Default DB on Postgres
 postgres_user: postgres
-postgres_external_ip: '{{hostvars[groups.kubeworkers[0]]}}' # Any k8s worker node since its a nodeport
+postgres_external_ip: '{{groups.kubeworkers[0]}}' # Any k8s worker node since its a nodeport
 # Permanent storage params
 postgres_local_storage_hostname: '{{persistent_storage_hostname}}'
 postgres_local_storage_path: /mnt/mosip_data/postgres
