--- a/deployment/sandbox-v2/app/roles/ingress/files/k8s_ingress_service.yml
+++ b/deployment/sandbox-v2/app/roles/ingress/files/k8s_ingress_service.yml
@@ -7,16 +7,18 @@ metadata:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
 spec:
-  type: LoadBalancer 
+  type: NodePort
   ports:
     - name: http
       port: 80
       targetPort: 80
       protocol: TCP
+      nodePort: 30080
     - name: https
       port: 443
       targetPort: 443
       protocol: TCP
+      nodePort: 30443
   selector:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/part-of: ingress-nginx
