--- a/deployment/sandbox-v2/app/roles/ingress/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/ingress/tasks/main.yml
@@ -6,10 +6,16 @@
     wait: 'yes'
     wait_timeout: 240 
 
+# Deploy ingress rules 
+- name: 'Ingress service - get yml from template'
+  template:
+     src: k8s_ingress_service.yml.j2 
+     dest: '{{tmp_dir}}/k8s_ingress_service.yml'
+
 - name: Deploy ingress service
   k8s:
     state: present
-    src: '{{role_path}}/files/k8s_ingress_service.yml'
+    src: '{{tmp_dir}}/k8s_ingress_service.yml'
     wait: 'yes'
     wait_timeout: 240 
 
