--- a/deployment/sandbox-v2/app/roles/hdfs/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/hdfs/defaults/main.yml
@@ -1,6 +1,6 @@
 hdfs_name: hdfs
 hdfs_image: sequenceiq/hadoop-docker
-hdfs_version: 2.7.1
+hdfs_version: 2.7.0  # 2.7.1, latest does not get pulled.
 # Below users should match with property files
 hdfs_users:  # PROP
   - regprocessor
