--- a/deployment/sandbox-v2/app/group_vars/console.yml
+++ b/deployment/sandbox-v2/app/group_vars/console.yml
@@ -1,4 +1,5 @@
-
+# Variable very specific to console that runs all the ansible scripts.
+#
 tmp_dir: '{{playbook_dir}}/tmp/'
 logs_dir: '{{playbook_dir}}/logs/'
 
