--- a/deployment/sandbox-v2/app/k8scluster.yml
+++ b/deployment/sandbox-v2/app/k8scluster.yml
@@ -3,10 +3,10 @@
   become: yes
   gather_facts: yes
   roles:
-    - { role: packages/ansible, tags: [ansible]}
-    - { role: packages/pip, tags: [pip]}
-    - { role: packages/git, tags: [git]}
-    - { role: packages/selinux, tags: [selinux]}
+    #- { role: packages/ansible, tags: [ansible]}  # May not be needed TODO
+    #- { role: packages/pip, tags: [pip] # May not be needed TODO}
+    #- { role: packages/git, tags: [git]} # May not be needed TODO 
+    #- { role: packages/selinux, tags: [selinux]} # May not be needed TODO
     - { role: k8scluster/docker, tags: docker }
 
 - hosts: kubemaster
