--- a/deployment/sandbox-v2/app/roles/kernel/kernel-auth/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-auth/tasks/main.yml
@@ -10,5 +10,5 @@
     state: present
     src: '{{tmp_dir}}/k8s_auth.yml'
     wait: 'yes'
-    wait_timeout: 120 
+    wait_timeout: '{{docker_wait_time}}' 
 
