[MOSIP-257] Readiness probe added.  NodePort removed from most services.

--- a/deployment/sandbox-v2/app/roles/kernel/kernel-auth/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-auth/defaults/main.yml
@@ -1,3 +1,4 @@
 kernel_auth_name: kernel-auth-service
 kernel_auth_version: 1.0.7
 kernel_auth_image: mosipid/kernel-auth-service
+kernel_auth_container_port: 8091
