--- a/deployment/sandbox-v2/app/roles/config-server/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/config-server/defaults/main.yml
@@ -11,4 +11,4 @@ config_repo_mount_path: /var/lib/
 config_repo_local_storage_hostname: '{{persistent_storage_hostname}}'
 config_repo_uri: '{{config_repo_mount_path}}{{config_repo_name}}'
 config_server_url: 'http://{{config_server_name}}/config'
-
+config_server_container_port: 51000
