--- a/deployment/sandbox-v2/app/roles/kernel/kernel-audit/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-audit/defaults/main.yml
@@ -1,3 +1,4 @@
 kernel_auditmanager_name: kernel-auditmanager-service 
 kernel_auditmanager_version: 1.0.6
 kernel_auditmanager_image: mosipid/kernel-auditmanager-service
+kernel_auditmanager_container_port: 8081
