--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
@@ -15,5 +15,5 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_keycloak.yml'
-    wait: 'yes'
-    wait_timeout: '{{docker_wait_time}}'
+#    wait: 'yes'
+#    wait_timeout: '{{docker_wait_time}}'
