[MOSIP-257] Wait removed for most pods except few who critical for others.

--- a/deployment/sandbox-v2/app/mosip.yml
+++ b/deployment/sandbox-v2/app/mosip.yml
@@ -4,13 +4,13 @@
   gather_facts: true
   roles:
      # Base MOSIP infra
-     - {role: ingress, tags: ingress} 
      - {role: postgres/postgres, tags: postgres}
-     - {role: postgres/postgres-init, tags: postgres-init} # Depends on postgres
      - {role: config-server, tags: config-server} 
      - {role: keycloak/keycloak, tags: keycloak} # Depends on postgres 
-     - {role: keycloak/keycloak-init, tags: keycloak-init} # Depends on keycloak
      - {role: hdfs, tags: hdfs} # 
+     - {role: ingress, tags: ingress}
+     - {role: postgres/postgres-init, tags: postgres-init} # Start only after ingress is installed 
+     - {role: keycloak/keycloak-init, tags: keycloak-init}  
 
      # Kernel  
      - {role: kernel/kernel-auth, tags: [kernel-auth, kernel]}  
