--- a/deployment/sandbox-v2/app/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/config-server/tasks/main.yml
@@ -24,5 +24,5 @@
     src: '{{tmp_dir}}/k8s_config_server.yml'  
     state: present
     wait: yes
-    wait_timeout: '{{docker_wait_time}}'
+    wait_timeout: '{{docker_wait_time}}'  # Wait is imp for config server
 
