--- a/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-batchjob/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-batchjob/tasks/main.yml
@@ -9,6 +9,6 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_pre_reg_batchjob.yml'
-    wait: 'yes'
+    wait: no
     wait_timeout: '{{docker_wait_time}}' 
 
