--- a/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-ui/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-ui/tasks/main.yml
@@ -10,8 +10,8 @@
     state: present
     src: '{{tmp_dir}}/k8s_pre_reg_config.yml'
     wait: 'yes'
-    wait_timeout: 120 
-
+    wait_timeout: '{{docker_wait_time}}' # Make sure config map is set
+ 
 # Deploy UI container
 - name: Get yml from template 
   template:
@@ -22,6 +22,6 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_pre_reg_ui.yml'
-    wait: 'yes'
-    wait_timeout: 120 
+    wait: no
+    wait_timeout: '{{docker_wait_time}}'
 
