--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/pre-registration-qa.properties
@@ -199,7 +199,7 @@ mosip.batch.token.authmanager.appId=preregistration
 mosip.batch.token.authmanager.userName=mosip-pre-registration-client
 
 # Determines password for batch job authenticaion
-mosip.batch.token.authmanager.password=39879f5b-ce40-4ca4-a40b-33f4f3b5a0e1
+mosip.batch.token.authmanager.password=abc123
 
 # Determines URL for batch job authenticaion
 mosip.batch.token.authmanager.url=${kernel.auth.env}/${masterdata.service.version}/${kernel.auth.contextpath}/authenticate/clientidsecretkey
