--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/defaults/main.yml
@@ -2,5 +2,5 @@ keycloak_name: keycloak
 keycloak_user: admin  # Should match mosip.keycloak.admin.user.id in mosip config properites
 keycloak_password: admin # Should match  mosip.keycloak.admin.secret.key in mosip config properties
 keycloak_url: '{{ingress_base_url}}/{{keycloak_name}}' # To acces Keycloak from outside cluster but within network. Refer ingress file.
-keycloak_external_url: '{{mosip_public_server_url}}/keycloak/auth'  # For some reason domain name does not work, so we use ip here. 
+keycloak_external_url: '{{mosip_public_server_url}}/keycloak/auth' # To access keycloak from the Internet
 keycloak_container_port: 8080
