--- a/deployment/sandbox-v2/app/mosip.yml
+++ b/deployment/sandbox-v2/app/mosip.yml
@@ -4,13 +4,13 @@
   gather_facts: true
   roles:
      # Base MOSIP infra
-     - {role: postgres/postgres, tags: postgres}
-     - {role: config-server, tags: config-server} 
-     - {role: keycloak/keycloak, tags: keycloak} # Depends on postgres 
-     - {role: hdfs, tags: hdfs} # 
-     - {role: ingress, tags: ingress}
-     - {role: postgres/postgres-init, tags: postgres-init} # Start only after ingress is installed 
-     - {role: keycloak/keycloak-init, tags: keycloak-init}  
+     - {role: postgres/postgres, tags: [postgres, infra]}
+     - {role: keycloak/keycloak, tags: [keycloak, infra]}
+     - {role: hdfs, tags: [hdfs, infra]} # 
+     - {role: ingress, tags: [ingress, infra]}
+     - {role: postgres/postgres-init, tags: [postgres-init, infra]} # Start only after ingress is installed 
+     - {role: keycloak/keycloak-init, tags: [keycloak-init, infra]}  
+     - {role: config-server, tags: [config-server, infra]} 
 
      # Kernel  
      - {role: kernel/kernel-auth, tags: [kernel-auth, kernel]}  
