--- a/deployment/sandbox-v2/app/console.yml
+++ b/deployment/sandbox-v2/app/console.yml
@@ -3,6 +3,7 @@
 - hosts: console
   gather_facts: true 
   roles:
+     - {role: packages/epel, tags: [epel]}
      - {role: packages/kubectl, tags: [kubectl]}
      - {role: packages/psql, tags: [psql]}
      - {role: packages/openshift, tags: [openshift]}
