--- a/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-ui/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-ui/defaults/main.yml
@@ -1,4 +1,4 @@
-pre_reg_api_host: https://{{mosip_public_server}}/  # UI client will connect to this host for Pre Reg APIs for external access
+pre_reg_api_host: {{sandbox_public_url}}  # UI client will connect to this domain for Pre Reg APIs for external access
 pre_reg_ui_name: pre-registration-ui
 #pre_reg_ui_version: 1.0.6
 pre_reg_ui_version: 1.0.6-SNAPSHOT.217 
