[MOSIP-552] Multi-cluster setup added for Reg Proc.

--- a/deployment/sandbox-v2/app/group_vars/mzcluster.yml
+++ b/deployment/sandbox-v2/app/group_vars/mzcluster.yml
@@ -1,7 +1,9 @@
 # Ansible
 # ansible_user: root
 
-kubemaster_ip: "{{ hostvars[groups['kubemaster'][0]]['ansible_default_ipv4'].address | default(groups['kubemasster'][0]) }}"
+cluster_name: 'mzcluster'  # Same as in hosts.ini
+cluster_master: 'mzmaster' # Same as in hosts.ini
+kubemaster_ip: "{{ hostvars[groups[cluster_master][0]]['ansible_default_ipv4'].address | default(groups[cluster_master][0]) }}"
 
 # Kubernetes
 kube_version: v1.18.0
