--- a/deployment/sandbox-v2/app/hosts.ini
+++ b/deployment/sandbox-v2/app/hosts.ini
@@ -1,19 +1,35 @@
 [console]
 console ansible_user=mosipuser
 
-[kubemaster]
-kubemaster ansible_user=root
-
-[kubeworkers]
-kubeworker0 ansible_user=root 
-kubeworker1 ansible_user=root
-
-[kubecluster:children]
-kubemaster 
-kubeworkers 
-
+# On public facing machine
 [nginxserver]
 console ansible_user=mosipuser  
+
+# All k8s clusters
+[clusters:children]  
+mzcluster
+dmzcluster
+
+# Military zone (secure zone) cluster
+[mzcluster:children]
+mzmaster 
+mzworkers 
+[mzmaster]
+mzmaster ansible_user=root
+[mzworkers]
+mzworker0 ansible_user=root 
+mzworker1 ansible_user=root
+
+# De-Military zone (dmz) cluster
+[dmzcluster:children]
+dmzmaster 
+dmzworkers 
+[dmzmaster]
+dmzmaster ansible_user=root
+[dmzworkers]
+dmzworker0 ansible_user=root 
+
+
 
 
 
