--- a/deployment/sandbox-v2/app/roles/k8scluster/cni/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/k8scluster/cni/tasks/main.yml
@@ -14,7 +14,7 @@
 
 - name: "Check {{ network }} daemonset is working"
   shell: kubectl --kubeconfig={{ kubeadmin_config }} get ds --all-namespaces | grep {{ network }}
-  delegate_to: "{{ groups['kubemaster'][0] }}"
+  delegate_to: "{{ groups[cluster_master][0] }}" 
   run_once: true
   register: check_net
   ignore_errors: true
@@ -23,5 +23,5 @@
 - name: "Create {{ network }} network daemonset"
   when: check_net is failed
   command: kubectl apply --kubeconfig={{ kubeadmin_config }} -f {{ network_dir }}/
-  delegate_to: "{{ groups['kubemaster'][0] }}"
+  delegate_to: "{{ groups[cluster_master][0] }}" 
   run_once: true
