--- a/deployment/sandbox-v2/app/roles/k8scluster/kubernetes/master/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/k8scluster/kubernetes/master/tasks/main.yml
@@ -26,7 +26,7 @@
 - name: "Copy config file"
   fetch:
     src: /etc/kubernetes/admin.conf 
-    dest: "{{ lookup('env', 'HOME') }}/.kube/config"
+    dest: "{{ lookup('env', 'HOME') }}/.kube/{{cluster_name}}.config"
     flat: yes
   run_once: yes
   ignore_errors: yes
