[MOSIP-552] Reorg for multi cluster.

--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
+
 # Deploy Keycloak kubernetes
+- include_vars:
+    file: roles/postgres/postgres/defaults/main.yml
+
 - name: Ensures directory is present
   file: 
     path: '{{tmp_dir}}'
