--- a/deployment/sandbox-v2/app/group_vars/all.yml
+++ b/deployment/sandbox-v2/app/group_vars/all.yml
@@ -11,15 +11,20 @@ info_email_address: info@mosip.io  # Used in generating letsencrypt certificates
 
 docker_wait_time: 600   # Wait for docker to pull and deploy
 
+# Any of the worker nodes of a cluster may be used to access nodeport
+mz_cluster_any_node: '{{groups["mzworkers"][0]}}'
+dmz_cluster_any_node: '{{groups["dmzworkers"][0]}}'
+
 # Ingress is in NodePort configuration. So connect to any node cluster
 ingress_nodeport_http: 30080 
 ingress_nodeport_https: 30443
-ingress_base_url: 'http://{{groups["kubeworkers"][0]}}:{{ingress_nodeport_http}}'
+ingress_base_url: 'http://{{mz_cluster_any_node}}:{{ingress_nodeport_http}}'
 
 sandbox_domain_name: test-sandbox.southindia.cloudapp.azure.com
 sandbox_public_url: 'https://{{sandbox_domain_name}}'
 
-persistent_storage_node: "{{groups['kubeworkers'][0]}}" # All persistent data will be stored on this node
+persistent_storage_node: mzworker0  # All persistent data will be stored on this node
+
 # CAUTTION: Assuming actual hostname and inventory hostname is same
 # TODO: Another variables in hosts.ini may be defined like remote_hostname in case the two are different.
 persistent_storage_hostname: '{{hostvars[persistent_storage_node]["inventory_hostname"]}}' 
