--- a/deployment/sandbox-v2/app/persistence.yml
+++ b/deployment/sandbox-v2/app/persistence.yml
@@ -1,6 +1,6 @@
 # This play creates persistent directories on worker node for
 # postgres, config server, etc.
-- hosts: kubeworker0
+- hosts: mzworker0
   gather_facts: true
   roles: 
     - {role: persistence, tags: [persistence]}
