--- a/deployment/sandbox-v2/app/site.yml
+++ b/deployment/sandbox-v2/app/site.yml
@@ -1,5 +1,5 @@
 # Master playbook
-- import playbook: k8scluster.yml
+- import playbook: mzcluster.yml
 - import_playbook: console.yml 
 - import_playbook: persistence.yml
 - import_playbook: mosip.yml 
