--- a/deployment/sandbox-v2/app/group_vars/all.yml
+++ b/deployment/sandbox-v2/app/group_vars/all.yml
@@ -15,6 +15,10 @@ docker_wait_time: 600   # Wait for docker to pull and deploy
 mz_cluster_any_node: '{{groups["mzworkers"][0]}}'
 dmz_cluster_any_node: '{{groups["dmzworkers"][0]}}'
 
+# Config files
+mz_kube_config: "{{lookup('env', 'HOME') }}/.kube/mzcluster.config" 
+dmz_kube_config: "{{lookup('env', 'HOME') }}/.kube/dmzcluster.config" 
+
 # Ingress is in NodePort configuration. So connect to any node cluster
 ingress_nodeport_http: 30080 
 ingress_nodeport_https: 30443
