--- a/deployment/sandbox-v2/app/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/config-server/tasks/main.yml
@@ -13,6 +13,7 @@
     namespace: default
     state: present
     src: '{{tmp_dir}}/k8s_repo_storage.yml'
+    kubeconfig: '{{kube_config}}'
 
 - name: Kubernetes yml file from template 
   template:
@@ -23,6 +24,7 @@
   k8s:
     src: '{{tmp_dir}}/k8s_config_server.yml'  
     state: present
+    kubeconfig: '{{kube_config}}'
     wait: yes
     wait_timeout: '{{docker_wait_time}}'  # Wait is imp for config server
 
