--- a/deployment/sandbox-v2/app/roles/hdfs/tasks/create_dir.yml
+++ b/deployment/sandbox-v2/app/roles/hdfs/tasks/create_dir.yml
@@ -2,7 +2,7 @@
 # ownership
 #
 - name: 'Create directory for {{hdfs_user}}'
-  command: 'kubectl exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfs -mkdir -p {{hdfs_user_dir}}"' 
+  command: 'kubectl --kubeconfig {{kube_config}} exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfs -mkdir -p {{hdfs_user_dir}}"' 
 
 - name: 'Give permissions to {{hdfs_user}}' 
-  command: 'kubectl exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfs -chown -R {{hdfs_user}}:{{hdfs_user}} {{hdfs_user_dir}}"' 
+  command: 'kubectl --kubeconfig {{kube_config}} exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfs -chown -R {{hdfs_user}}:{{hdfs_user}} {{hdfs_user_dir}}"' 
