--- a/deployment/sandbox-v2/app/roles/hdfs/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/hdfs/tasks/main.yml
@@ -9,6 +9,7 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_hdfs.yml'
+    kubeconfig: '{{kube_config}}'
     wait: 'yes'
     wait_timeout: '{{docker_wait_time}}'
 
@@ -19,13 +20,14 @@
     namespace: default
     label_selectors:
       - app = {{hdfs_name}} 
+    kubeconfig: '{{kube_config}}'
   register: hdfs_pod
 
 - set_fact:
     hdfs_pod_id: '{{hdfs_pod.resources[0].metadata.name}}'
 
 - name: Wait for HDFS to come out of safe mode
-  command: 'kubectl exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfsadmin -safemode get"' 
+  command: 'kubectl --kubeconfig {{kube_config}} exec -it {{hdfs_pod_id}} -- /bin/bash -c "/usr/local/hadoop/bin/hdfs dfsadmin -safemode get"' 
   register: out 
   retries: 3 
   delay: 10
