--- a/deployment/sandbox-v2/app/roles/ingress/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/ingress/tasks/main.yml
@@ -3,6 +3,7 @@
   k8s:
     state: present
     src: '{{role_path}}/files/k8s_ingress_init.yml'
+    kubeconfig: '{{kube_config}}'
     wait: 'yes'
     wait_timeout: 240 
 
@@ -16,6 +17,7 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_ingress_service.yml'
+    kubeconfig: '{{kube_config}}'
     wait: 'yes'
     wait_timeout: 240 
 
@@ -29,6 +31,7 @@
   k8s:
     state: absent
     src: '{{tmp_dir}}/k8s_ingress.yml'
+    kubeconfig: '{{kube_config}}'
     wait: 'yes'
     wait_timeout: 240 
 
@@ -36,5 +39,6 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_ingress.yml'
+    kubeconfig: '{{kube_config}}'
     wait: 'yes'
     wait_timeout: 240 
