--- a/deployment/sandbox-v2/app/roles/kernel/kernel-auth/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-auth/tasks/main.yml
@@ -9,6 +9,7 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_auth.yml'
+    kubeconfig: '{{kube_config}}'
     wait: 'yes'
     wait_timeout: '{{docker_wait_time}}' # Wait is important for Auth
 
