--- a/deployment/sandbox-v2/app/roles/kernel/kernel-otp/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-otp/tasks/main.yml
@@ -9,6 +9,7 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_kernel_otp.yml'
+    kubeconfig: '{{kube_config}}'
     wait: no
     wait_timeout: '{{docker_wait_time}}' 
 
