--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
@@ -19,5 +19,6 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_keycloak.yml'
+    kubeconfig: '{{kube_config}}'
     wait: 'yes'
     wait_timeout: '{{docker_wait_time}}'
