--- a/deployment/sandbox-v2/app/roles/postgres/postgres/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/postgres/postgres/tasks/main.yml
@@ -11,6 +11,7 @@
     namespace: default
     state: present
     src: '{{tmp_dir}}/k8s_pg_storage.yml'
+    kubeconfig: '{{kube_config}}'
 
 # Deploy postgres container 
 - name: Get postgres yml from template 
@@ -23,4 +24,5 @@
     state: present
     src: '{{tmp_dir}}/k8s_postgres.yml'
     wait: 'yes'
+    kubeconfig: '{{kube_config}}'
     wait_timeout: '{{docker_wait_time}}' 
