--- a/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-ui/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-ui/tasks/main.yml
@@ -9,6 +9,7 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_pre_reg_config.yml'
+    kubeconfig: '{{kube_config}}'
     wait: 'yes'
     wait_timeout: '{{docker_wait_time}}' # Make sure config map is set
  
@@ -22,6 +23,7 @@
   k8s:
     state: present
     src: '{{tmp_dir}}/k8s_pre_reg_ui.yml'
+    kubeconfig: '{{kube_config}}'
     wait: no
     wait_timeout: '{{docker_wait_time}}'
 
