--- a/deployment/sandbox-v2/app/roles/config-server/files/properties/registration-processor-dmz.properties
+++ b/deployment/sandbox-v2/app/roles/config-server/files/properties/registration-processor-dmz.properties
@@ -1,8 +1,8 @@
 # Database Host name
-mosip.registration.processor.database.hostname=52.172.54.231
+mosip.registration.processor.database.hostname=mzworker0
 
 # Database Port
-mosip.registration.processor.database.port=9001
+mosip.registration.processor.database.port=30090
 
 #-----------Health checker--------------
 management.endpoint.health.show-details=always
@@ -48,16 +48,11 @@ hibernate.jdbc.lob.non_contextual_creation=true
 hibernate.show_sql=false
 
 #-----packet-manager----------
-registration.processor.DEV_DIRECTORY = /home/ftp1
 
-#Location to store all the uploaded file
-registration.processor.ARCHIVE_LOCATION=${registration.processor.DEV_DIRECTORY}/ARCHIVE_PACKET_LOCATION
-
+registration.processor.LANDING_ZONE = /mnt/regprc/landing
+registration.processor.ARCHIVE_LOCATION = /mnt/regprc/archival
 #Location to store the file which is consumed from the print and postal queue
 registration.processor.PRINT_POSTAL_SERVICE=/home/ftp1/PRINIT_POSTAL_SERVICE
-
-#Location to store the encrypted packet in the dmz zone
-registration.processor.LANDING_ZONE = ${registration.processor.DEV_DIRECTORY}/LANDING_ZONE
 
 #---------registration-processor-camel-bridge------------
 
@@ -88,16 +83,16 @@ token.request.password={cipher}AQABt4aBjlC2OxQNy04L3OtJm8KaTDwSJhV3lEpUh6xBM2xGV
 #Token generation version
 token.request.version=1.0
 #Token generation Client Id
-token.request.clientId=registration-processor
+token.request.clientId=mosip-reproc-client 
 #Token generation secret key
-token.request.secretKey=d80ec0be-bba7-4d8e-bf0c-85ab45bb976b
+token.request.secretKey=abc123
 #Token generation issuer url
 token.request.issuerUrl=https://mosipkeycloakqa.southindia.cloudapp.azure.com/auth/realms/mosip
 
 #--------Registration processor rest client API's--------------
 
-#Base url
-mosip.base.url=https://qa.mosip.io
+# The base url here points to ingress on MZ cluster
+mosip.base.url=http://mzworker0:30080
 
 #Audit Service
 AUDIT=${mosip.base.url}/v1/auditmanager/audits
