--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/tasks/main.yml
@@ -2,7 +2,7 @@
 
 # Deploy Keycloak kubernetes
 - include_vars:
-    file: roles/postgres/postgres/defaults/main.yml
+    file: ../../../postgres/postgres/defaults/main.yml
 
 - name: Ensures directory is present
   file: 
