--- a/deployment/sandbox-v2/app/group_vars/all.yml
+++ b/deployment/sandbox-v2/app/group_vars/all.yml
@@ -29,11 +29,7 @@ postgres_nodeport: 30090  # fixed for connecting from outside the cluster
 sandbox_domain_name: test-sandbox.southindia.cloudapp.azure.com
 sandbox_public_url: 'https://{{sandbox_domain_name}}'
 
-persistent_storage_node: mzworker0  # All persistent data will be stored on this node
-
-# CAUTTION: Assuming actual hostname and inventory hostname is same
-# TODO: Another variables in hosts.ini may be defined like remote_hostname in case the two are different.
-persistent_storage_hostname: '{{hostvars[persistent_storage_node]["inventory_hostname"]}}' 
+mz_persistent_storage_node: mzworker0  # All persistent data will be stored on this node
 
 # Registration processor shared variables
 regproc_landing_folder: /mnt/reproc/landing 
@@ -41,3 +37,5 @@ regrpoc_landing_hostname: dmzworker0  # Should be same one used in creating thes
 regproc_archival_folder: /mnt/reproc/archival
 regproc_archival_hosntame: dmzworker0
 
+# Postgres persistent storage
+postgres_local_storage_path: /mnt/mosip_data/postgres
