--- a/deployment/sandbox-v2/app/site.yml
+++ b/deployment/sandbox-v2/app/site.yml
@@ -1,4 +1,11 @@
 # Master playbook
 #
-- import_playbook: playbooks/check.yml
+- import_playbook: playbooks/console.yml  # Basic setup on console machine
+- import_playbook: playbooks/mzcluster.yml  # MZ cluster setup 
+- import_playbook: playbooks/dmzcluster.yml  # DMS cluster setup
+- import_playbook: playbooks/mosip_env.yml # MOSIP DB, Keycloak, hdfs etc.
+- import_playbook: playbooks/config-server.yml   
+- import_playbook: playbooks/mosip_kernel.yml
+- import_playbook: playbooks/mosip_prereg.yml
+- import_playbook: playbooks/nginx.xml
 
