--- a/deployment/sandbox-v2/app/group_vars/console.yml
+++ b/deployment/sandbox-v2/app/group_vars/console.yml
@@ -1,7 +1,7 @@
 # Variable very specific to console that runs all the ansible scripts.
 #
-tmp_dir: '/tmp' 
-logs_dir: '/tmp'
+tmp_dir: '/tmp/' 
+logs_dir: '/tmp/'
 
 # Variables that are shared across plays (otherwise, all variables are in respective
 # roles)
