--- a/deployment/sandbox-v2/app/roles/config-server/defaults/main.yml
+++ b/deployment/sandbox-v2/app/roles/config-server/defaults/main.yml
@@ -1,14 +1,13 @@
-config_server_name: kernel-config-server  # Will be used as service name too
+config_server_name: config-server  # Will be used as service name too
 config_server_version: 1.0.5
 config_server_image: 'mosipid/sandbox-config-server:1.0.5'
 config_server_jar_name: kernel-config-server # Without .jar. Used locally for Docker
 config_server_jar_uri: "{{artifactory_uri}}/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{config_server_version}}/{{config_server_jar_name}}-{{config_server_version}}.jar"
-config_repo_node_dir: /mnt/mosip_data/
-config_repo_name: config_repo  # Git repo inside above node_path
-config_repo_node_path: '{{config_repo_node_dir}}/{{config_repo_name}}'
-config_repo_search_folder: ''  # If all properites at at the root repo level, then this will be empty
-config_repo_mount_path: /var/lib/  
-config_repo_local_storage_hostname: '{{persistent_storage_hostname}}'
-config_repo_uri: '{{config_repo_mount_path}}{{config_repo_name}}'
+config_server_repo_mount_path: /var/lib/  
+config_server_repo_uri: '{{config_server_repo_mount_path}}{{config_repo_name}}'
 config_server_url: 'http://{{config_server_name}}/config'
 config_server_container_port: 51000
+config_server_pv_name: config-server-local-storage
+config_server_pv_hostname: '{{mz_persistent_storage_node}}' # persistent volume
+config_server_pvc_name: config-repo-pv-claim
+config_server_pvc_size: 10Mi # Should not exceed pv size
