--- a/deployment/sandbox-v2/app/roles/config-server/tasks/main.yml
+++ b/deployment/sandbox-v2/app/roles/config-server/tasks/main.yml
@@ -2,17 +2,29 @@
 # The docker is pushed to a local registry with SSL as Kubernetes 
 # deployment needs such a registry.
 ---
-## Create persistent storage
-- name: Get persistent storage yml from template 
-  template:
-     src: k8s_repo_storage.yml.j2
-     dest: '{{tmp_dir}}/k8s_repo_storage.yml'
+- include_vars: ../../config-repo/defaults/main.yml
 
-- name: Deploy persistent storage on kurbernetes
+- name: Create pv for config-server 
+  include_role:
+    name: common/pv
+  vars:
+    pv_name: '{{config_server_pv_name}}'
+    pv_path: '{{config_repo_node_dir}}'
+    pv_size: '{{config_repo_storage_size}}' 
+    pv_node_hostname: '{{config_server_pv_hostname}}'
+
+# Create pvc for config server
+#
+- name: template to yml 
+  template:
+     src: k8s_config_pvc.yml.j2
+     dest: '{{tmp_dir}}/k8s_config_pvc.yml'
+ 
+- name: Deploy pvc 
   k8s:
     namespace: default
     state: present
-    src: '{{tmp_dir}}/k8s_repo_storage.yml'
+    src: '{{tmp_dir}}/k8s_config_pvc.yml'
     kubeconfig: '{{kube_config}}'
 
 - name: Kubernetes yml file from template 
