--- a/deployment/sandbox-v2/app/playbooks/console.yml
+++ b/deployment/sandbox-v2/app/playbooks/console.yml
@@ -2,6 +2,9 @@
 # further execution of automation
 - hosts: console
   gather_facts: true 
+  tasks:
+    - {name: 'Create tmp folder', file: {name: '{tmp_dir}}', state: directory}}
+    - {name: 'Create logs folder', file: {name: '{logs_dir}}', state: directory}}
   roles:
      - {role: packages/epel, tags: [epel]}
      - {role: packages/pip, tags: [pip]}
@@ -12,5 +15,4 @@
      - {role: packages/psql, tags: [psql]}
      - {role: packages/openshift, tags: [openshift]}
      - {role: repos, tags: [repos]}
-     - {role: tmp-dirs, tags: [tmp-dirs]}
 
