[MOSIP-552] Clamav added.

--- a/deployment/sandbox-v2/app/playbooks/mosip_env.yml
+++ b/deployment/sandbox-v2/app/playbooks/mosip_env.yml
@@ -16,6 +16,7 @@
      - {role: postgres/postgres, tags: [postgres, infra]}
      - {role: keycloak/keycloak, tags: [keycloak, infra]}
      - {role: hdfs, tags: [hdfs, infra]} # 
+     - {role: clamav, tags: [clamav, infra]} # 
      - {role: ingress, tags: [ingress, infra]}
      - {role: postgres/postgres-init, tags: [postgres-init, infra]} # Start only after ingress is installed 
      - {role: keycloak/keycloak-init, tags: [keycloak-init, infra]}  
